# clientServer

client/: CMakeLists.txt
client/src/: client.cpp  client.h  connection.cpp  connection.h  file_reader.cpp  file_reader.h  filereader.cpp  main.cpp
common/: log.cpp  log.h  util.cpp  util.h
server/: CMakeLists.txt
server/src/: connection.cpp  connection.h  main.cpp  message_parser.cpp  message_parser.h  server.cpp  server.h
